# entc-adb

./: CMakeLists.txt  README.md  index.html  install_all.bat  install_all.ksh  install_all.sh  params.json  push.sh  push_github.sh
adbl/: CMakeLists.txt  FindAdbl_1_3.cmake  FindAdbl_1_4.cmake
adbl/adbl_mysql/: CMakeLists.txt  adbl_mysql.c  test_adbl_mysql_basic.c  test_adbl_mysql_ps.c
adbl/adbl_sqlite/: CMakeLists.txt  adbl_sqlite3.c  adbl_sqlite3.h
adbl/cmake/: FindMySQLAdbl.cmake  FindSQLiteAdbl.cmake
adbl/core/: CMakeLists.txt  adbl.h  adbl_attributes.c  adbl_attributes.h  adbl_constraint.c  adbl_constraint.h  adbl_delete.c  adbl_delete.h  adbl_insert.c  adbl_insert.h  adbl_manager.c  adbl_manager.h  adbl_module.inc  adbl_procedure.h  adbl_query.c  adbl_query.h  adbl_security.h  adbl_structs.h  adbl_table.c  adbl_table.h  adbl_update.c  adbl_update.h  ocadbl.h
adbl/src/: CMakeLists.txt
adbl/src/app/: adbl_app.c
adbl/src/core/: adbl.c  adbl.h
adbl/src/pvd_mysql/: CMakeLists.txt  adbl_mysql.c  adbl_mysql.h  bindvars.c  bindvars.h  prepare.c  prepare.h
adbo/: CMakeLists.txt  FindAdbo_1_3.cmake  FindAdbo_1_4.cmake  install_linux  install_macosx
adbo/core/: CMakeLists.txt  adbo.c  adbo.h  adbo_container.h  adbo_context.h  adbo_context_intern.h  adbo_data.c  adbo_data.h  adbo_item.c  adbo_item.h  adbo_node.c  adbo_node.h  adbo_object.h  adbo_schema.h  adbo_substitute.c  adbo_types.h  adbo_value.h
adbo/tests/: CMakeLists.txt  adbl.xml
adbo2/src/: CMakeLists.txt  adbo2.c  adbo2.h
adbo2/src/tests/: ut_adbo2_basics.c
entc/: CMakeLists.txt  FindEntc.cmake  FindEntc_1_3.cmake  FindEntc_1_4.cmake  LICENSE  install_linux  install_macosx  install_windows.bat  make_install_xcode.sh
entc/aio/: ecaio.c  ecaio.h  ecaio_ctx.c  ecaio_ctx.h  ecaio_event.c  ecaio_event.h  ecaio_file.c  ecaio_file.h  ecaio_msg.h  ecaio_notify.c  ecaio_notify.h  ecaio_proc.c  ecaio_proc.h  ecaio_sendf.c  ecaio_sendf.h  ecaio_socket.c  ecaio_socket.h
entc/cmake/: FindCrypt.cmake  FindDL.cmake  FindPThread.cmake
entc/fmt/: entc_json.c  entc_json.h  entc_parser_json.c  entc_parser_json.h  entc_tokenizer.c  entc_tokenizer.h
entc/stc/: entc_list.c  entc_list.h  entc_map.c  entc_map.h  entc_str.c  entc_str.h  entc_stream.c  entc_stream.h  entc_udc.c  entc_udc.h
entc/sys/: entc_err.c  entc_err.h  entc_export.h  entc_mutex.c  entc_mutex.h  entc_queue.c  entc_queue.h  entc_thread.c  entc_thread.h  entc_types.h
entc/system/: ecaio.c  ecaio.h  ecaio_ctx.c  ecaio_ctx.h  ecaio_event.c  ecaio_event.h  ecaio_file.c  ecaio_file.h  ecaio_msg.c  ecaio_msg.h  ecaio_notify.c  ecaio_notify.h  ecaio_proc.c  ecaio_proc.h  ecaio_sendf.c  ecaio_sendf.h  ecaio_socket.c  ecaio_socket.h  ecaio_unix.c  ecaio_win.c  ecasyncio.c  ecasyncio.h  ecdaemon.c  ecdaemon.h  ecdefs.h  ecdefs.h_old  ecdl.c  ecdl.h  ecdlib.c  ecdlib.h  ecevents.h  ecevents_bsd.c  ecevents_linux.c  ecevents_win.c  ecexec.h  ecexec_unix.c  ecexec_win.c  ecfile.c  ecfile.h  ecfile_unix.c  (+36 more)
entc/system/.svn/: entries
entc/tests/: CMakeLists.txt  ecenv.c  ecenv.h  eclua.c  eclua.h  ectest_app.c  test.sh
entc/tests/.svn/: entries
entc/tests/aio/: ut_ecaio_webserver.c
entc/tests/sys/: ut_entc_queue.c
entc/tests/system/: unittest_dh.c  unittest_events.c  unittest_exec.c  ut_ecaio.c  ut_ecaio_notify.c  ut_ecaio_proc.c  ut_ecfile.c  ut_ectime.c
entc/tests/tools/: unittest_asyncserv.c  unittest_bins.c  unittest_json.c  unittest_mime.c  unittest_mimeparser.c  unittest_server.c  ut_eccode.c  (+8 more)
entc/tools/: ecasyncvc.c  ecasyncvc.h  ecbins.c  ecbins.h  eccode.c  eccode.h  eccrypt.c  eccrypt.h  ecdata.c  ecdata.h  echash.c  echash.h  echtml.c  echtml.h  echttp.c  echttp.h  ecjparser.c  ecjparser.h  ecjson.c  ecjson.h  eclocale.c  eclocale.h  eclog.c  eclog.h  eclparser.c  eclparser.h  ecmail.c  ecmail.h  ecmime.c  ecmime.h  ecreadbuffer.c  ecreadbuffer.h  ecserver.c  ecserver.h  ectemplate.c  ectemplate.h  ectokenizer.c  ectokenizer.h  ecxmldom.c  ecxmldom.h  (+4 more)
entc/types/: ecalloc.c  ecalloc.h  ecarray.c  ecarray.h  ecbuffer.c  ecbuffer.h  ecchain.c  ecchain.h  eccursor.c  eccursor.h  ecerr.c  ecerr.h  ecintmap.c  ecintmap.h  eclist.c  eclist.c_old  eclist.h  eclist.h_old  ecmap.c  ecmap.h  ecmap_new2.c  ecmapchar.c  ecmapchar.h  ecptrmap.c  ecptrmap.h  ecstack.c  ecstack.h  ecstream.c  ecstream.h  ecstring.c  ecstring.h  ectable.c  ectable.h  ecudc.c  ecudc.h  ecvector.c  ecvector.c.old  ecvector.h  ocstring.h
entc/utils/: eclogger.c  eclogger.h  ecmessages.c  ecmessages.h  ecobserver.c  ecobserver.h  ecreadbuffer.c  ecreadbuffer.h  ecsecfile.c  ecsecfile.h  ecsmartbuffer.c  ecsmartbuffer.h  ecstreambuffer.c  ecstreambuffer.h
libadbl/: CMakeLists.txt  FindAdbl.cmake  install_linux  install_macosx  install_windows.bat
libadbl/adbl_mysql/: CMakeLists.txt  adbl_mysql.c  test_adbl_mysql_basic.c  test_adbl_mysql_ps.c
libadbl/adbl_oracle/: CMakeLists.txt  adbl_oracle.c  adbl_oracle_common.c  adbl_oracle_common.h  adbl_oracle_connection.c  adbl_oracle_connection.h  adbl_oracle_createsql.c  adbl_oracle_createsql.h  adbl_oracle_transaction.c  adbl_oracle_transaction.h
libadbl/adbl_sqlite/: CMakeLists.txt  adbl_sqlite3.c
libadbl/core/: CMakeLists.txt  adbl.h  adbl_attributes.c  adbl_attributes.h  adbl_constraint.c  adbl_constraint.h  adbl_delete.c  adbl_delete.h  adbl_insert.c  adbl_insert.h  adbl_manager.c  adbl_manager.h  adbl_module.inc  adbl_procedure.c  adbl_procedure.h  adbl_query.c  adbl_query.h  adbl_security.c  adbl_structs.h  adbl_table.c  adbl_table.h  adbl_update.c  adbl_update.h  ocadbl.h
libadbo/: CMakeLists.txt  FindAdbo.cmake  FindAdbo_1_3.cmake  install_linux  install_macosx  install_windows.bat
libadbo/core/: CMakeLists.txt  adbo.c  adbo.h  adbo_container.c  adbo_container.h  adbo_context.c  adbo_context.h  adbo_context_intern.h  adbo_data.c  adbo_data.h  adbo_item.c  adbo_item.h  adbo_node.c  adbo_node.h  adbo_object.c  adbo_object.h  adbo_schema.c  adbo_schema.h  adbo_substitute.c  adbo_substitute.h  adbo_types.h  adbo_value.c  adbo_value.h
libadbo/tests/: adbl.xml  subs.xml  test.db  test.xml  test_objects.c
(+46 files in other folders)
