cmake_minimum_required(VERSION 2.4)

PROJECT(adbo)

GET_TARGET_PROPERTY(ENTC_LIBRARY entc "LOCATION")
IF(ENTC_LIBRARY-NOTFOUND)
	MESSAGE(STATUS "**** entc external ****")
	find_package(Entc)
ELSE()
	MESSAGE(STATUS "**** entc internal ****")
	SET(ENTC_LIBRARIES entc)
	SET(ENTC_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../entc)
endif()

GET_TARGET_PROPERTY(ADBL_LIBRARY adbl "LOCATION")
IF(ADBL_LIBRARY-NOTFOUND)
	MESSAGE(STATUS "**** adbl external ****")
	find_package(Adbl)
ELSE()
	MESSAGE(STATUS "**** adbl internal ****")
	SET(ADBL_LIBRARIES adbl)
	SET(ADBL_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../libadbl/core)
endif()

add_subdirectory(core)
