cmake_minimum_required(VERSION 2.4)

INCLUDE_DIRECTORIES( ${ENTC_INCLUDE_DIRS} ${ADBL_INCLUDE_DIRS} )

ADD_EXECUTABLE( test_objects test_objects.c )
TARGET_LINK_LIBRARIES( test_objects adbo ${ENTC_LIBRARIES} ${ADBL_LIBRARIES} )

GET_TARGET_PROPERTY(TEST_OBJECTS test_objects LOCATION)
ADD_CUSTOM_COMMAND(
  TARGET test_objects
  POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy ${TEST_OBJECTS} ../tests
  COMMENT "Copy ${TEST_OBJECTS}"
)
