cmake_minimum_required(VERSION 2.4)

PROJECT(adbo2)

SET(CMAKE_VERBOSE_MAKEFILE OFF)
SET(CMAKE_MACOSX_RPATH 0)
SET(CMAKE_INSTALL_PREFIX /opt/entc_1_4/)

find_package(Entc_1_4)
find_package(Adbl_1_4)

SET (ADBO_HEADERS
  adbo2.h
)

SET (ADBO_SOURCES
  adbo2.c
)

INCLUDE_DIRECTORIES( ${ENTC_INCLUDE_DIRS} ${ADBL_INCLUDE_DIRS} )

ADD_LIBRARY( adbo2 SHARED ${ADBO_HEADERS} ${ADBO_SOURCES})
TARGET_LINK_LIBRARIES( adbo2 ${ENTC_LIBRARIES} ${ADBL_LIBRARIES} )

set_target_properties(adbo2 PROPERTIES VERSION 2.0.0 SOVERSION 2.0.0)
set_property(TARGET adbo2 PROPERTY INSTALL_RPATH_USE_LINK_PATH TRUE)

install (TARGETS adbo2 DESTINATION lib)
install (FILES ${ADBO_HEADERS} DESTINATION include/adbo2)

INSTALL_FILES (/${CMAKE_ROOT}/Modules/ FILES ${CMAKE_CURRENT_SOURCE_DIR}/FindAdbo_2_0.cmake)
